--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev" : "nodemon server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.2"
