--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "./src/server.js",
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "nodemon ./src/server.js",
     "test": "jest --config jest.config.ts"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "jest": "^29.7.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
