--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -6,7 +6,7 @@
   "main": "./src/server.js",
   "scripts": {
     "dev": "nodemon ./src/server.js",
-    "test": "jest --config jest.config.ts"
+    "test": "jest --config jest.config.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,14 @@
     "express-async-handler": "^1.2.0",
     "jest": "^29.7.0",
     "mongodb": "^6.3.0",
+    "mongodb-memory-server": "^9.1.1",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "babel-jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
