--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-crt": "^1.19.0",
+    "aws-iot-device-sdk-v2": "^1.17.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
