--- a/code/backend/Backend/package.json
+++ b/code/backend/Backend/package.json
@@ -11,9 +11,11 @@
   "author": "Bimbara",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3"
   },
   "devDependencies": {
