--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -21,7 +21,10 @@
     "mongodb": "^6.3.0",
     "mongodb-memory-server": "^9.1.1",
     "mongoose": "^8.0.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
