--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -14,17 +14,17 @@
   "dependencies": {
     "aws-crt": "^1.19.0",
     "aws-iot-device-sdk-v2": "^1.17.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongodb-memory-server": "^9.1.1",
     "mongoose": "^8.0.2",
-    "nodemon": "^3.0.2",
-    "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
-    "dotenv": "^16.3.1"
+    "nodemon": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
