commented aws iot sdk

--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "./src/server.js",
   "scripts": {
+    "start" :"node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "test": "jest --config jest.config.js"
   },
