--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "./src/server.js",
   "scripts": {
-    "start" :"node ./src/server.js",
+    "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "test": "jest --config jest.config.js"
   },
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.485.0",
     "aws-crt": "^1.19.0",
     "aws-iot-device-sdk-v2": "^1.17.0",
     "bcrypt": "^5.1.1",
@@ -25,6 +26,7 @@
     "mongodb": "^6.3.0",
     "mongodb-memory-server": "^9.1.1",
     "mongoose": "^8.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
