--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.485.0",
+    "@aws-sdk/s3-request-presigner": "^3.485.0",
     "aws-crt": "^1.19.0",
     "aws-iot-device-sdk-v2": "^1.17.0",
     "bcrypt": "^5.1.1",
