--- a/code/beehive-dashboard/package.json
+++ b/code/beehive-dashboard/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.10.3",
     "sass": "^1.69.5"
