--- a/code/backend/package.json
+++ b/code/backend/package.json
@@ -19,6 +19,7 @@
     "aws-iot-device-sdk-v2": "^1.17.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
