--- a/code/backend/.choreo/component.yaml
+++ b/code/backend/.choreo/component.yaml
@@ -1,7 +1,11 @@
-schemaVersion: 1.0 
- # Example endpoint configuration
+schemaVersion: "1.1"
 endpoints:
-- name: my-service-endpoint
-  service:
-     port: 5000
-  type: REST
+    - name: my-service-endpoint
+      displayName: my-service-endpoint
+      service:
+        basePath: /
+        port: 5000
+      type: REST
+      networkVisibilities:
+        - Public
+      schemaFilePath: .
