--- a/code/backend/.choreo/component.yaml
+++ b/code/backend/.choreo/component.yaml
@@ -7,5 +7,5 @@ endpoints:
         port: 5000
       type: REST
       networkVisibilities:
-        - Public
+        - Project
       schemaFilePath: openapi.yaml
